# Inferno

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: test.yml
docs/: AUTHENTICATION.md  CONFIGURATION.md  INSTALL.md  TOOLS.md  USAGE.md
examples/: INTEGRATION_QUICK_START.md  ctf_mode_example.py  diminishing_returns_example.py  quality_contexts_demo.py  quality_gate_integration_demo.py  swarm_coordination_demo.py  swarm_coordinator_example.py
src/inferno/: __init__.py  runner.py
src/inferno/agent/: __init__.py  mcp_tools.py  model_alloy.py  prompts.py  sdk_executor.py  strategic_planner.py
src/inferno/agents/: __init__.py  reasoner.py
src/inferno/algorithms/: __init__.py  bandits.py  base.py  bayesian.py  budget.py  integration.py  manager.py  mcts.py  metrics.py  qlearning.py  state.py
src/inferno/auth/: __init__.py  client.py  credentials.py
src/inferno/benchmarks/: __init__.py  metrics.py  runner.py  tasks.py
src/inferno/cli/: __init__.py  display.py  logging_config.py  main.py  shell.py
src/inferno/config/: __init__.py  environment.py  manager.py  profiles.py  settings.py
src/inferno/core/: __init__.py  assessment_scoring.py  attack_selector.py  branch_tracker.py  checkpoint.py  constants.py  differential_analyzer.py  guardrails.py  hint_extractor.py  knowledge.py  mitre_attack.py  network.py  payload_mutator.py  preflight.py  response_analyzer.py  scope.py  unicode_security.py
src/inferno/handlers/: __init__.py  base.py  checkpoint_handler.py  error_handler.py  tool_handler.py
src/inferno/memory/: __init__.py
src/inferno/observability/: __init__.py  cost_tracker.py  metrics.py  tracing.py
src/inferno/patterns/: __init__.py  conditional.py  hierarchical.py  parallel.py  pattern.py  sequential.py  swarm.py  utils.py
src/inferno/prompts/: __init__.py  base.py  dynamic_generator.py  engine.py  mako_engine.py  system_reasoner.md
src/inferno/prompts/behaviors/: chaining.md  cognitive_loop.md  creative_exploitation.md  cve_driven.md  escalation_requirements.md  exploitation_escalation.md  human_methodology.md  persistence.md  pre_report_checklist.md  severity_calibration.md  so_what_gate.md  termination.md
src/inferno/prompts/cai_methodology/: __init__.py  bug_bounty.md  ctf_solver.md  web_pentester.md
src/inferno/prompts/contexts/: api.md  cloud.md  ctf.md  iot.md  network.md  web.md
src/inferno/prompts/mako/: checkpoint.mako  ctf.mako  system.mako
src/inferno/prompts/phases/: enumeration.md  exploitation.md  post_exploit.md  recon.md
src/inferno/prompts/strategic/: README.md  __init__.py  application_model_context.md  attack_plan_context.md  chain_discovery_context.md  parameter_role_guidance.md
src/inferno/quality/: __init__.py  candidate.py  config.py  gate.py  pipeline.py
src/inferno/reporting/: __init__.py  bug_bounty_export.py  generator.py  models.py
src/inferno/setup/: __init__.py  checker.py  docker_manager.py  installer.py
src/inferno/swarm/: COORDINATOR_README.md  README.md  __init__.py  agents.py  message_bus.py  meta_coordinator.py  parallel_orchestrator.py  tool.py
src/inferno/tools/: __init__.py  base.py  caido.py  decorator.py  execute_command.py  http.py  memory.py  registry.py  shell_session.py  strategy.py  think.py
src/inferno/utils/: __init__.py  error_handling.py  formatting.py  http_client.py  parsing.py  validation.py
tests/: README.md  TESTING_GUIDE.md  __init__.py  conftest.py  test_bug_hunting_fixes.py  test_sdk_executor_fix_args.py
tests/accuracy/: test_owasp_benchmark.py
tests/benchmarks/: test_algorithm_benchmarks.py
tests/e2e/: __init__.py  test_ctf_validation.py
tests/integration/: __init__.py  test_algorithm_integration.py  test_cli_commands.py  test_vulnerability_validation_flow.py
tests/performance/: test_scanning_performance.py
tests/unit/: __init__.py  test_application_model.py  test_cai_systems.py  test_coordinator.py  test_cors_verifier.py  test_idor_scanner.py  test_message_bus.py  test_nosql_injection.py  test_parameter_role_analyzer.py  test_payload_mutator.py  test_scope.py  test_shell_enhancements.py  test_ssrf_detector.py  test_strategic_planner.py  test_swarm_coordinator.py  test_synthesis.py  test_technology_contexts.py
tests/unit/algorithms/: __init__.py  test_bayesian_confidence.py  test_dynamic_budget.py  test_mcts.py  test_multi_armed_bandit.py  test_q_learning.py
tests/unit/core/: test_assessment_scoring.py
tests/unit/quality/: __init__.py  test_gates.py  test_pipeline.py
tests/unit/tools/: test_strategy_tools.py
(+52 files in other folders)
